--- a/docker-compose.prod.test.yml
+++ b/docker-compose.prod.test.yml
@@ -54,7 +54,7 @@ services:
       - ./media:/media
       - ./nginx/certificates:/etc/ssl/certs
       - /etc/letsencrypt:/etc/letsencrypt:ro
-      - ../marswide_frontend/build:/usr/share/nginx/html
+      - ../arierp_frontend/build:/usr/share/nginx/html
     ports:
       - "80:80"
       - "443:443"
