#20250611 fix: nginx conf

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -73,8 +73,8 @@ server {
 
     listen 443 ssl;
 
-    ssl_certificate /etc/letsencrypt/live/marswide.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/marswide.com/privkey.pem;
+    # ssl_certificate /etc/letsencrypt/live/marswide.com/fullchain.pem;
+    # ssl_certificate_key /etc/letsencrypt/live/marswide.com/privkey.pem;
 
     client_max_body_size 10M;
 
@@ -82,13 +82,13 @@ server {
 
 server {
     listen 80;
-    server_name marswide.com www.marswide.com;
+    server_name 192.168.81.4;
 
-    if ($host = marswide.com) {
+    if ($host = 192.168.81.4) {
         return 301 https://$host$request_uri;
     }
 
-    if ($host = www.marswide.com) {
+    if ($host = www.192.168.81.4) {
         return 301 https://$host$request_uri;
     }
 }
