--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -71,7 +71,7 @@ server {
     }
 
 
-    listen 443 ssl;
+    # listen 443 ssl;
 
     # ssl_certificate /etc/letsencrypt/live/marswide.com/fullchain.pem;
     # ssl_certificate_key /etc/letsencrypt/live/marswide.com/privkey.pem;
