#20250611 fix: nginx conf

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,5 @@
 server {
-    server_name marswide.com www.marswide.com;
+    server_name 192.168.81.4;
 
     proxy_buffer_size 128k;
     proxy_buffers 4 256k;
@@ -71,10 +71,10 @@ server {
     }
 
 
-    # listen 443 ssl;
+    listen 443 ssl;
 
-    # ssl_certificate /etc/letsencrypt/live/marswide.com/fullchain.pem;
-    # ssl_certificate_key /etc/letsencrypt/live/marswide.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/marswide.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/marswide.com/privkey.pem;
 
     client_max_body_size 10M;
 
