--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -71,10 +71,13 @@ server {
     }
 
 
-    # listen 443 ssl;
+    listen 443 ssl;
 
     # ssl_certificate /etc/letsencrypt/live/marswide.com/fullchain.pem;
     # ssl_certificate_key /etc/letsencrypt/live/marswide.com/privkey.pem;
+
+    ssl_certificate     /etc/ssl/arierp/fullchain.pem;
+    ssl_certificate_key /etc/ssl/arierp/privkey.pem;
 
     client_max_body_size 10M;
 
