--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -55,7 +55,7 @@ services:
       #- ./nginx/certificates:/etc/ssl/certs
       #- /etc/letsencrypt:/etc/letsencrypt:ro
       - ../arierp_frontend/build:/usr/share/nginx/html
-      - ./nginx/certificates:/etc/ssl/arierp
+      - ./nginx/certificates:/etc/ssl/arierp:ro
       - ./nginx/certbot-www:/var/www/certbot
     ports:
       - "80:80"
