--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -57,6 +57,7 @@ services:
       - ../arierp_frontend/build:/usr/share/nginx/html
       - ./nginx/certificates:/etc/ssl/arierp:ro
       - ./nginx/certbot-www:/var/www/certbot
+      - ./ssl:/etc/ssl/arierp
     ports:
       - "80:80"
       - "443:443"
