--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,5 @@
 server {
-    server_name 192.168.81.4;
+    server_name arinet.arileasing.com.tr www.arinet.arileasing.com.tr;
 
     proxy_buffer_size 128k;
     proxy_buffers 4 256k;
@@ -71,13 +71,13 @@ server {
     }
 
 
-    # listen 443 ssl;
+    listen 443 ssl;
 
-    # ssl_certificate /etc/letsencrypt/live/marswide.com/fullchain.pem;
-    # ssl_certificate_key /etc/letsencrypt/live/marswide.com/privkey.pem;
+    # ssl_certificate /etc/letsencrypt/live/arinet.arileasing.com.tr/fullchain.pem;
+    # ssl_certificate_key /etc/letsencrypt/live/arinet.arileasing.com.tr/privkey.pem;
 
-    # ssl_certificate     /etc/ssl/arierp/fullchain-clean.pem;
-    # ssl_certificate_key /etc/ssl/arierp/privkey-clean.pem;
+    ssl_certificate     /etc/ssl/arinet.arileasing.com.tr/fullchain-clean.pem;
+    ssl_certificate_key /etc/ssl/arinet.arileasing.com.tr/privkey-clean.pem;
 
     client_max_body_size 10M;
 
@@ -85,13 +85,13 @@ server {
 
 server {
     listen 80;
-    server_name 192.168.81.4;
+    server_name arinet.arileasing.com.tr www.arinet.arileasing.com.tr;
 
-    if ($host = 192.168.81.4) {
+    if ($host = arinet.arileasing.com.tr) {
         return 301 https://$host$request_uri;
     }
 
-    if ($host = www.192.168.81.4) {
+    if ($host = www.arinet.arileasing.com.tr) {
         return 301 https://$host$request_uri;
     }
 }
