--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -76,8 +76,17 @@ server {
     # ssl_certificate /etc/letsencrypt/live/arinet.arileasing.com.tr/fullchain.pem;
     # ssl_certificate_key /etc/letsencrypt/live/arinet.arileasing.com.tr/privkey.pem;
 
-    ssl_certificate     /etc/ssl/arinet.arileasing.com.tr/fullchain-clean.pem;
-    ssl_certificate_key /etc/ssl/arinet.arileasing.com.tr/privkey-clean.pem;
+    # ssl_certificate     /etc/ssl/arinet.arileasing.com.tr/fullchain-clean.pem;
+    # ssl_certificate_key /etc/ssl/arinet.arileasing.com.tr/privkey-clean.pem;
+
+    ssl_certificate /etc/ssl/certificate.crt;
+    ssl_certificate_key /etc/ssl/private.key;
+    ssl_trusted_certificate /etc/ssl/ca_bundle.crt;
+
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+
+
 
     client_max_body_size 10M;
 
