--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -81,7 +81,7 @@ server {
 
     ssl_certificate /etc/ssl/certificate.crt;
     ssl_certificate_key /etc/ssl/private.key;
-    ssl_trusted_certificate /etc/ssl/ca_bundle.crt;
+    # ssl_trusted_certificate /etc/ssl/ca_bundle.crt;
 
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
